Fixed the overlapping copyright text.

--- a/css/main_style.css
+++ b/css/main_style.css
@@ -24,7 +24,7 @@ h1 {
   background-color: #f7f7f7;
   max-width: 1000px;
   margin: auto;
-  height: 100vh;
+  min-height: 100vh;
   border: 2px solid #f7f7f7;
   border-radius: 25px;
   overflow: hidden;
@@ -56,10 +56,9 @@ h1 {
   position: relative;
 }
 
-
 #copyright {
-  position: absolute;
+  position: relative;
   width: 1000px;
   text-align: center;
-  bottom: 20px;
+  padding-top: 20px;
 }
